Does not work togglz

--- a/feature-flags/src/main/resources/application.properties
+++ b/feature-flags/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 togglz.enabled=true
 togglz.feature-enums=com.ok.featureflags.module.Features
+togglz.console.enabled=true
+togglz.console.secured=false
+togglz.console.path=/togglz-console
+#togglz.console.use-management-port=false
+togglz.console.use-management-port=true
+#togglz.console.feature-admin-authority=ROLE_ADMIN
+logging.level.org.togglz=DEBUG
+#logging.level.root=DEBUG
+#logging.level.web=DEBUG
