--- a/feature-flags/pom.xml
+++ b/feature-flags/pom.xml
@@ -47,6 +47,15 @@
             <artifactId>togglz-spring-boot-starter</artifactId>
             <version>2.6.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.togglz</groupId>
+            <artifactId>togglz-console</artifactId>
+            <version>4.0.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
