Create togglz package

--- a/feature-flags/src/main/resources/application.properties
+++ b/feature-flags/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 togglz.enabled=true
-togglz.feature-enums=com.ok.featureflags.module.Features
+togglz.feature-enums=com.ok.featureflags.togglz.module.Features
 togglz.console.enabled=true
 togglz.console.secured=false
 togglz.console.path=/togglz-console
