Java feature flags

--- a/feature-flags/src/main/resources/application.properties
+++ b/feature-flags/src/main/resources/application.properties
@@ -9,3 +9,19 @@ togglz.console.use-management-port=true
 logging.level.org.togglz=DEBUG
 #logging.level.root=DEBUG
 #logging.level.web=DEBUG
+
+#endpoints.actuator.enabled=true
+management.endpoint.refresh.enabled=true
+#management.endpoints.enabled-by-default=false
+management.endpoints.web.exposure.include=refresh
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.group.custom.include=diskSpace,ping, refresh
+#management.endpoint.shutdown.enabled=true
+
+#feature-flags.feature1=false
+feature-flags.feature1=true
+
+spring.cloud.config.uri=http://localhost:8081
+spring.cloud.config.profile=default
+spring.cloud.config.label=latest
+spring.application.name=local
