Use feature flag from database

--- a/feature-flags/src/main/resources/application.properties
+++ b/feature-flags/src/main/resources/application.properties
@@ -1,27 +1,2 @@
-togglz.enabled=true
-togglz.feature-enums=com.ok.featureflags.togglz.module.Features
-togglz.console.enabled=true
-togglz.console.secured=false
-togglz.console.path=/togglz-console
-#togglz.console.use-management-port=false
-togglz.console.use-management-port=true
-#togglz.console.feature-admin-authority=ROLE_ADMIN
-logging.level.org.togglz=DEBUG
-#logging.level.root=DEBUG
-#logging.level.web=DEBUG
-
-#endpoints.actuator.enabled=true
 management.endpoint.refresh.enabled=true
-#management.endpoints.enabled-by-default=false
-management.endpoints.web.exposure.include=refresh
-#management.endpoints.web.exposure.include=*
-#management.endpoint.health.group.custom.include=diskSpace,ping, refresh
-#management.endpoint.shutdown.enabled=true
-
-#feature-flags.feature1=false
-feature-flags.feature1=true
-
-spring.cloud.config.uri=http://localhost:8081
-spring.cloud.config.profile=default
-spring.cloud.config.label=latest
-spring.application.name=local
+management.endpoints.web.exposure.include=refresh,health
