--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/lego
 spring.datasource.password=root
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-cloud.config.server.jdbc.spring.order=1
-cloud.config.server.jdbc.spring.sql=SELECT `key`, `value` FROM `properties` where `application`=? and `profile`=? and `label`=?
+spring.cloud.config.server.jdbc.order=1
+spring.cloud.config.server.jdbc.sql=SELECT `key`, `value` FROM `properties` where `application`=? and `profile`=? and `label`=?
