--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
         password: root
-        url: jdbc:mysql://localhost:3306/lego
+        url: jdbc:mysql://localhost:3306/feature_flags_configuration
         username: root
     jmx:
         default-domain: config
